# claude-code-example

./: .copier-answers.yml  .gitignore  CLAUDE.md  README.md  pyproject.toml  rsync-global-to-local.sh
.claude/commands/: archive.md  catchup.md  code-review.md  commit.md  implement.md  plan.md  pr.md
.claude/hooks/: run-qa.sh
.claude/project-plans/: README.md
.claude/skills/anki/: SKILL.md  main.py  test_anki.py
.claude/skills/postgres/: README.md  SKILL.md  main.py  test_postgres.py
.claude/skills/slack-notify/: SKILL.md  main.py  test_slack.py
claude/: project-plan.md
claude/commands/: catchup.md
claude_code_example/: __init__.py  app_context.py
claude_code_example/cli/: __main__.py  simple_command.py
claude_code_example/cli/subcommand/: __init__.py  subsubcommand.py
claude_code_example/config/: app_config.py
docs/: project-plan.md
docs/project-plans/: 2025-11-22-5301764-anki-skill-complete.md
tests/: __init__.py  test_import.py
tests/cli/: conftest.py  test_cli.py  test_simple_command.py
tests/cli/subcommand/: test_subcommand.py  test_subsubcommand.py
tests/config/: test_app_config.py
tests/logging/: test_logging.py
